--- a/ArmTemplates/app-service-plan-ase.json
+++ b/ArmTemplates/app-service-plan-ase.json
@@ -44,6 +44,9 @@
         "PremiumV2"
       ],
       "defaultValue": "Standard"
+    },
+    "resourceTags": {
+      "type": "object"
     }
   },
   "variables": {
@@ -84,7 +87,8 @@
       "name": "[parameters('appServicePlanName')]",
       "location": "[parameters('aspLocation')]",
       "properties": "[if(variables('DeployToASE'), variables('ASPResourceProperties').WithASE, variables('ASPResourceProperties').WithoutASE)]",
-      "sku": "[if(variables('DeployToASE'), variables('defaultAppServicePlanSKUs').Isolated, variables('defaultAppServicePlanSKUs').NonASE)]"
+      "sku": "[if(variables('DeployToASE'), variables('defaultAppServicePlanSKUs').Isolated, variables('defaultAppServicePlanSKUs').NonASE)]",
+      "tags": "[parameters('resourceTags')]"
     }
   ],
   "outputs": {
