--- a/ArmTemplates/app-service.json
+++ b/ArmTemplates/app-service.json
@@ -37,7 +37,7 @@
         "sslBindingType": {
             "type": "string",
             "defaultValue": "SniEnabled",
-            "allowedValues" : [
+            "allowedValues": [
                 "SniEnabled",
                 "IpBasedEnabled"
             ]
@@ -48,6 +48,14 @@
             "metadata": {
                 "description": "Format removing backlashes: [{\"Name\": \"IP A\",\"ipAddress\": \"123.123.123.123\"},{\"Name\": \"IP B\",\"ipAddress\": \"234.234.234.234\"}]"
             }
+        },
+        "currentStack": {
+            "type": "string",
+            "defaultValue": "dotnet"
+        },
+        "netFrameworkVersion": {
+            "type": "string",
+            "defaultValue": "v4.0"
         }
     },
     "variables": {
@@ -89,7 +97,14 @@
                         "siteConfig": {
                             "appSettings": "[parameters('appServiceAppSettings')]",
                             "connectionStrings": "[parameters('appServiceConnectionStrings')]",
-                            "ipSecurityRestrictions": "[parameters('ipSecurityRestrictions')]"
+                            "ipSecurityRestrictions": "[parameters('ipSecurityRestrictions')]",
+                            "metadata": [
+                                {
+                                    "name": "CURRENT_STACK",
+                                    "value": "[parameters('currentStack')]"
+                                }
+                            ],
+                            "netFrameworkVersion": "[parameters('netFrameworkVersion')]"
                         }
                     },
                     "dependsOn": [
