add workspace ID to AI template

--- a/ArmTemplates/application-insights.json
+++ b/ArmTemplates/application-insights.json
@@ -11,6 +11,9 @@
         "attachedService": {
             "defaultValue": "",
             "type": "string"
+        },
+        "WorkspaceResourceId": {
+            "type": "string"
         }
     },
     "resources": [
