Revert "Add log analytics template (#4)"
This reverts commit e3fe9adc34afdb04c9bcbabbf1bc3f3ce3ad82a9.

--- a/ArmTemplates/application-insights.json
+++ b/ArmTemplates/application-insights.json
@@ -11,14 +11,11 @@
         "attachedService": {
             "defaultValue": "",
             "type": "string"
-        },
-        "workspaceResourceId": {
-            "type": "string"
         }
     },
     "resources": [
         {
-            "apiVersion": "2020-02-02",
+            "apiVersion": "2015-05-01",
             "name": "[parameters('appInsightsName')]",
             "type": "Microsoft.Insights/components",
             "location": "[resourceGroup().location]",
@@ -27,8 +24,7 @@
                 "[concat('hidden-link:', resourceId('Microsoft.Web/sites', parameters('attachedService')))]": "Resource"
             },
             "properties": {
-                "Application_Type": "web",
-                "workspaceResourceId": "[parameters('workspaceResourceId')]"
+                "Application_Type": "web"
             }
         }
     ],
